wearther/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
/* 
Fonts embedded from Google Fonts:
'Playfair Display' - 400 to 900
'Open Sans' - 300 to 800
*/

h1, h2 {
    /* 
    font-family: 'Playfair Display', Helvetica, Arial, sans-serif;
    */
}

body {
    /*
    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
    */
}

